Resize images to same aspect ratio. Adjust padding to fix weird spacing on small desktop.

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ a:hover {
 }
 @media (min-width: 992px) {
   .projects-section .project-text {
-    padding: 5rem;
+    padding: 2rem 5rem;
   }
 }
 
